Fix card spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -72,7 +72,15 @@ body,
     align-self: flex-start;
 
     margin-top: var(--sidebar-spacing);
+
+    display: flex;
+    flex-direction: column;
+    gap: var(--card-spacing);
   }
+}
+
+.todos .card {
+  padding: var(--card-spacing) 0;
 }
 
 .card {
